--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,33 @@
             <artifactId>cors-filter</artifactId>
             <version>2.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.metro</groupId>
+            <artifactId>webservices-rt</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>jaxws-maven-plugin</artifactId>
+            <version>2.6</version>
+            <dependencies>
+            <dependency>
+                <groupId>org.glassfish.metro</groupId>
+                <artifactId>webservices-tools</artifactId>
+                <version>2.3.1</version>
+            </dependency>
+            <!-- see https://java.net/jira/browse/WSIT-1672 -->
+            <dependency>
+                <groupId>org.glassfish.metro</groupId>
+                <artifactId>webservices-rt</artifactId>
+                <version>2.3.1</version>
+            </dependency>
+            </dependencies>
+        </plugin>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
