--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>webservice</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>binotify</name>
-    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -33,12 +32,6 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin -->
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
@@ -60,29 +53,39 @@
             <artifactId>webservices-rt</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
-         <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>jaxws-maven-plugin</artifactId>
-            <version>2.6</version>
-            <dependencies>
-            <dependency>
-                <groupId>org.glassfish.metro</groupId>
-                <artifactId>webservices-tools</artifactId>
-                <version>2.3.1</version>
-            </dependency>
-            <!-- see https://java.net/jira/browse/WSIT-1672 -->
-            <dependency>
-                <groupId>org.glassfish.metro</groupId>
-                <artifactId>webservices-rt</artifactId>
-                <version>2.3.1</version>
-            </dependency>
-            </dependencies>
-        </plugin>
             <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+                <archive>
+                <manifest>
+                    <mainClass>binotify.Main</mainClass>
+                </manifest>
+                </archive>
+                <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+            <executions>
+                <execution>
+                <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                <phase>package</phase> <!-- bind to the packaging phase -->
+                <goals>
+                    <goal>single</goal>
+                </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+            <!-- <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
@@ -90,12 +93,12 @@
                     <port>8081</port>
                     <path>/</path>
                 </configuration>
-            </plugin>
-            <plugin>
+            </plugin> -->
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.0</version>
-            </plugin>
+            </plugin> -->
         </plugins>
     </build>
 </project>
